--- a/app/src/main/res/layout/movie_poster.xml
+++ b/app/src/main/res/layout/movie_poster.xml
@@ -16,12 +16,12 @@
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="320dp">
 
     <ImageView
         android:id="@+id/iv_movie_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitXY" />
 
 </FrameLayout>
