--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,12 @@
      limitations under the License.
 -->
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#262626</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorBackground">#434343</color>
+    <color name="colorAccent">#ff8400</color>
+
+    <color name="colorToolbar">#ffb327</color>
+    <color name="colorText">#b6b6b6</color>
+    <color name="colorDefaultText">#000000</color>
 </resources>
