--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -41,23 +41,52 @@
     </android.support.v7.widget.Toolbar>
 
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_movie_poster_detail"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="32dp"
-                android:background="@color/colorBackground"
-                android:layout_width="150dp"
-                android:layout_height="220dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_movie_poster_detail"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="32dp"
+                    android:background="@color/colorBackground"
+                    android:layout_width="150dp"
+                    android:layout_height="220dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/tv_movie_release_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="34sp"
+                        android:fontFamily="monospace"
+                        android:textStyle="bold"
+                        android:text="2017"/>
+
+                    <TextView
+                        android:id="@+id/tv_movie_vote_average"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:textColor="@color/colorDefaultText"
+                        android:text="8.1/10"/>
+                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -66,39 +95,16 @@
                 android:padding="16dp">
 
                 <TextView
-                    android:id="@+id/tv_movie_release_date"
+                    android:id="@+id/tv_movie_overview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="34sp"
-                    android:fontFamily="monospace"
-                    android:textStyle="bold"
-                    android:text="2017"/>
-
-                <TextView
-                    android:id="@+id/tv_movie_vote_average"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:textColor="@color/colorDefaultText"
-                    android:text="8.1/10"/>
+                    android:textSize="22dp"
+                    android:padding="8dp"
+                    android:text="The quiet life of a terrier named Max is upended when his owner takes in Duke, a stray whom Max instantly dislikes."/>
             </LinearLayout>
+
         </LinearLayout>
+    </ScrollView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <TextView
-                android:id="@+id/tv_movie_overview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="22dp"
-                android:padding="8dp"
-                android:text="The quiet life of a terrier named Max is upended when his owner takes in Duke, a stray whom Max instantly dislikes."/>
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
