--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -14,53 +14,83 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_movie_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.frangarcia.popularmovies.MovieDetailsActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tb_toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorToolbar">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_movie_original_title"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tb_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="42dp"
-            android:paddingTop="42dp"
-            android:paddingBottom="42dp"
-            android:textColor="@color/colorBlankText"
-            android:text="Original Title"/>
+            android:background="@color/colorToolbar">
 
-    </android.support.v7.widget.Toolbar>
+            <TextView
+                android:id="@+id/tv_movie_original_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="42dp"
+                android:paddingTop="42dp"
+                android:paddingBottom="42dp"
+                android:textColor="@color/colorBlankText"
+                tools:text="Original Title"/>
+
+        </android.support.v7.widget.Toolbar>
 
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/iv_movie_poster_detail"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="32dp"
-                    android:layout_width="150dp"
-                    android:layout_height="220dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/iv_movie_poster_detail"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginLeft="32dp"
+                        android:layout_width="150dp"
+                        android:layout_height="220dp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="16dp">
+
+                        <TextView
+                            android:id="@+id/tv_movie_release_date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="34sp"
+                            android:fontFamily="monospace"
+                            android:textStyle="bold"
+                            tools:text="2017"/>
+
+                        <TextView
+                            android:id="@+id/tv_movie_vote_average"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="20dp"
+                            android:textColor="@color/colorDefaultText"
+                            tools:text="8.1/10"/>
+                    </LinearLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -69,41 +99,15 @@
                     android:padding="16dp">
 
                     <TextView
-                        android:id="@+id/tv_movie_release_date"
+                        android:id="@+id/tv_movie_overview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="34sp"
-                        android:fontFamily="monospace"
-                        android:textStyle="bold"
-                        android:text="2017"/>
-
-                    <TextView
-                        android:id="@+id/tv_movie_vote_average"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="20dp"
-                        android:textColor="@color/colorDefaultText"
-                        android:text="8.1/10"/>
+                        android:textSize="22dp"
+                        android:padding="8dp"
+                        tools:text="The quiet life of a terrier named Max is upended when his owner takes in Duke, a stray whom Max instantly dislikes."/>
                 </LinearLayout>
+
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/tv_movie_overview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="22dp"
-                    android:padding="8dp"
-                    android:text="The quiet life of a terrier named Max is upended when his owner takes in Duke, a stray whom Max instantly dislikes."/>
-            </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
-
-
-</LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </LinearLayout>
+</ScrollView>
