--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"/>
 
     <ProgressBar
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="@dimen/loader_indicator"
+        android:layout_height="@dimen/loader_indicator"
         android:id="@+id/pb_main_loader_indicator"
         android:layout_gravity="center"
         android:visibility="invisible"/>
@@ -36,10 +36,10 @@
         android:id="@+id/tv_error_message_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:padding="16dp"
+        android:textSize="@dimen/error_network_size"
+        android:padding="@dimen/default_padding_margin_16"
         android:text="@string/error_network_message"
-        android:textColor="#F00"
+        android:textColor="@color/error_network"
         android:visibility="invisible"/>
 
 
