--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,19 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="movie_title_size">42dp</dimen>
+    <dimen name="movie_title_padding">42dp</dimen>
+    <dimen name="loader_indicator">42dp</dimen>
+
+    <dimen name="default_padding_margin_8">8dp</dimen>
+    <dimen name="default_padding_margin_16">16dp</dimen>
+    <dimen name="default_padding_margin_24">24dp</dimen>
+    <dimen name="default_padding_margin_32">32dp</dimen>
+
+    <dimen name="error_network_size">22dp</dimen>
+    <dimen name="movie_poster_width">160dp</dimen>
+    <dimen name="movie_poster_height">220dp</dimen>
+    <dimen name="movie_release_date_size">34dp</dimen>
+    <dimen name="movie_vote_average_size">20dp</dimen>
+    <dimen name="movie_overview_size">22dp</dimen>
 </resources>
